--- a/Instagram_clone/views/new_photo.ejs
+++ b/Instagram_clone/views/new_photo.ejs
@@ -3,5 +3,7 @@
 <form method="POST" enctype="multipart/form-data" action="/photo_upload">
 	<span>Upload Photo:</span>  
 	<input type="file" name="photo" /><br/><br/>
+	<span>Choose hashtags:</span> 
+	<input type="text" name="tags" maxlength="255" placeholder="#these#are#my#tags"/> <br/><br/>
    <input type="submit" value="submit">
 </form>
