--- a/Instagram_clone/views/API_Examples.ejs
+++ b/Instagram_clone/views/API_Examples.ejs
@@ -1,3 +1,14 @@
+<head>
+   <link rel="stylesheet" href="/styles.css">
+</head>
+
+<div class="topnav">
+  <a href="/">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+
 <h1>REST Example: Region Population</h1><br/>
 
 <form method="POST" enctype="application/x-www-form-urlencoded" action="/wb_api_call">
