--- a/Instagram_clone/views/API_Examples.ejs
+++ b/Instagram_clone/views/API_Examples.ejs
@@ -4,9 +4,10 @@
 
 <div class="topnav">
   <a href="/">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a href="/login">Log In</a>
+	<a href="/register">Register</a>
+  <a href="/api_examples">API Examples</a>
+  <a href="/new_photo">Upload Photo</a>
 </div>
 
 <h1>REST Example: Region Population</h1><br/>
