--- a/Instagram_clone/views/join_us.ejs
+++ b/Instagram_clone/views/join_us.ejs
@@ -1,3 +1,9 @@
+<head>
+   <link rel="stylesheet" href="/styles.css">
+</head>
+
+<%- navidata %>
+
 <h1>JOIN US</h1>
  
 <p class="lead">Enter your information to join <strong><%= data %></strong> 
