--- a/Instagram_clone/views/logged_in.ejs
+++ b/Instagram_clone/views/logged_in.ejs
@@ -1,2 +1,8 @@
+<head>
+   <link rel="stylesheet" href="/styles.css">
+</head>
+
+<%- data %>
+
 <h1>YOU HAVE SUCCESSFULLY LOGGED IN!!!</h1>
 <p>Have I ever told you how smart you are?</p>
