--- a/Instagram_clone/views/login.ejs
+++ b/Instagram_clone/views/login.ejs
@@ -1,3 +1,9 @@
+<head>
+   <link rel="stylesheet" href="/styles.css">
+</head>
+
+<%- data %>
+
 <h1>LOG IN</h1><br/>
  
 <form method="POST" action='/check_login'>
